RESOLVED FIXED163308
REGRESSION (r206025): All YouTube videos play with black bars on all four sides
https://bugs.webkit.org/show_bug.cgi?id=163308
Summary REGRESSION (r206025): All YouTube videos play with black bars on all four sides
Jer Noble
Reported 2016-10-11 17:09:31 PDT
REGRESSION (r206025): All YouTube videos play with black bars on all four sides
Attachments
Patch (9.17 KB, patch)
2016-10-12 09:16 PDT, Jer Noble
darin: review+
Patch for landing (10.60 KB, patch)
2016-10-13 13:15 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2016-10-11 17:14:11 PDT
Jer Noble
Comment 2 2016-10-12 09:16:08 PDT
Darin Adler
Comment 3 2016-10-13 12:37:14 PDT
Comment on attachment 291360 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=291360&action=review > Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:692 > RetainPtr<id> observer = weakThis->m_sizeChangeObservers.takeFirst(); What is going on here? How is it valuable to set a local variable that is then never used? > Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:960 > + m_cachedSize = FloatSize(); I think { } is nicer here than FloatSize(). > Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:988 > m_cachedSize = formatSize; What guarantees this new size is not zero?
Jer Noble
Comment 4 2016-10-13 12:58:00 PDT
(In reply to comment #3) > Comment on attachment 291360 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=291360&action=review > > > Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:692 > > RetainPtr<id> observer = weakThis->m_sizeChangeObservers.takeFirst(); > > What is going on here? How is it valuable to set a local variable that is > then never used? I looked back through this file's history, hoping that I'd find some case where I'd previously used the results of observer. Alas, it's never been used. I'll take care of this in a follow-up. > > Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:960 > > + m_cachedSize = FloatSize(); > > I think { } is nicer here than FloatSize(). Ok! > > Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:988 > > m_cachedSize = formatSize; > > What guarantees this new size is not zero? Nothing, and good point. Maybe I'll make this an Optional<FloatSize> and use !m_cachedSize instead of .isZero().
Jer Noble
Comment 5 2016-10-13 13:15:09 PDT
Created attachment 291509 [details] Patch for landing
WebKit Commit Bot
Comment 6 2016-10-19 20:12:57 PDT
Comment on attachment 291509 [details] Patch for landing Clearing flags on attachment: 291509 Committed r207584: <http://trac.webkit.org/changeset/207584>
Note You need to log in before you can comment on or make changes to this bug.